--- a/plugins/anatlyzer.experiments/.classpath
+++ b/plugins/anatlyzer.experiments/.classpath
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/poi/lib/commons-codec-1.9.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/poi/lib/commons-logging-1.1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/poi/lib/log4j-1.2.17.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/poi/ooxml-lib/xmlbeans-2.6.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/poi/poi-3.11-20141221.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/poi/poi-excelant-3.11-20141221.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/poi/poi-ooxml-3.11-20141221.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/poi/poi-ooxml-schemas-3.11-20141221.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
