--- a/plugins/anatlyzer.experiments/build.properties
+++ b/plugins/anatlyzer.experiments/build.properties
@@ -3,4 +3,12 @@ output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               lib/yamlbeans-1.08.jar
+               lib/yamlbeans-1.08.jar,\
+               lib/poi/poi-ooxml-schemas-3.11-20141221.jar,\
+               lib/poi/lib/commons-codec-1.9.jar,\
+               lib/poi/lib/commons-logging-1.1.3.jar,\
+               lib/poi/lib/log4j-1.2.17.jar,\
+               lib/poi/ooxml-lib/xmlbeans-2.6.0.jar,\
+               lib/poi/poi-3.11-20141221.jar,\
+               lib/poi/poi-excelant-3.11-20141221.jar,\
+               lib/poi/poi-ooxml-3.11-20141221.jar
