--- a/plugins/anatlyzer.atl.editor/plugin.xml
+++ b/plugins/anatlyzer.atl.editor/plugin.xml
@@ -3,6 +3,7 @@
 <plugin>
    <extension-point id="anatlyzer.atl.editor.quickfix" name="anATLyzer QuickFix" schema="schema/anatlyzer.atl.editor.quickfix.exsd"/>
    <extension-point id="anatlyzer.atl.editor.additionalanalysis" name="Additional Analysis" schema="schema/anatlyzer.atl.editor.additionalanalysis.exsd"/>
+   <extension-point id="anatlyzer.atl.editor.witnessfinder" name="Witness finder" schema="schema/anatlyzer.atl.editor.witnessfinder.exsd"/>
 
    <extension
          id="anatlyzerATLBuilder"
