Added a new variant of the quickfix extension point, "quickfixset" to aggregate several extension points Added "Remove binding" quickfix for unresolved bindings

--- a/plugins/anatlyzer.atl.editor.quickfix/plugin.xml
+++ b/plugins/anatlyzer.atl.editor.quickfix/plugin.xml
@@ -21,9 +21,9 @@
    </extension>
    <extension
          point="anatlyzer.atl.editor.quickfix">
-      <quickfix
-            apply="anatlyzer.atl.editor.quickfix.errors.NoRuleForBindingQuickfix">
-      </quickfix>
+      <quickfixset
+            detector="anatlyzer.atl.editor.quickfix.kinds.NoRuleForBindingQuickfixSet">
+      </quickfixset>
    </extension>
    <extension
          id="anatlyzer.atl.editor.quickfix.warnings.OperationOverCollectionQuickfix"
