--- a/plugins/anatlyzer.experiments.typing/plugin.xml
+++ b/plugins/anatlyzer.experiments.typing/plugin.xml
@@ -17,5 +17,13 @@
             resourceType="file:atl">
       </experiment>
    </extension>
+   <extension
+         id="typing.experiment.countOptimizations"
+         point="anatlyzer.experiments.newExperiment">
+      <experiment
+            delegate="anatlyzer.experiments.typing.CountOptimizations"
+            resourceType="file:atl">
+      </experiment>
+   </extension>
 
 </plugin>
