- Extracted Levenshtein distance to an utility class - Implemented FeatureNotFoundQuickFix quick fix (heuristic)

--- a/plugins/anatlyzer.atl.editor.quickfix/plugin.xml
+++ b/plugins/anatlyzer.atl.editor.quickfix/plugin.xml
@@ -63,4 +63,10 @@
             finder="anatlyzer.atl.editor.witness.UseWitnessFinder">
       </finder>
    </extension>
+   <extension
+         point="anatlyzer.atl.editor.quickfix">
+      <quickfix
+            apply="anatlyzer.atl.editor.quickfix.errors.FeatureNotFoundQuickFix">
+      </quickfix>
+   </extension>
 </plugin>
