Started implementing OperationNotFoundInThisModuleQuickfixSet

--- a/plugins/anatlyzer.atl.editor.quickfix/plugin.xml
+++ b/plugins/anatlyzer.atl.editor.quickfix/plugin.xml
@@ -75,4 +75,10 @@
             apply="anatlyzer.atl.editor.quickfix.errors.NoClassFoundInMetamodelQuickFix">
       </quickfix>
    </extension>
+   <extension
+         point="anatlyzer.atl.editor.quickfix">
+      <quickfixset
+            detector="anatlyzer.atl.editor.quickfix.kinds.OperationNotFoundInThisModuleQuickfixSet">
+      </quickfixset>
+   </extension>
 </plugin>
