--- a/plugins/anatlyzer.use.witness/.classpath
+++ b/plugins/anatlyzer.use.witness/.classpath
@@ -6,7 +6,7 @@
 	<classpathentry kind="lib" path="lib/use/combinatoricslib-0.2.jar"/>
 	<classpathentry kind="lib" path="lib/use/gsbase.jar"/>
 	<classpathentry kind="lib" path="lib/use/jruby-complete-1.4.0.jar"/>
-	<classpathentry kind="lib" path="lib/use/ModelValidator_fat.jar"/>
+	<classpathentry kind="lib" path="lib/use/ModelValidator_fat.jar" sourcepath="/transML/"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
