* Small reorganization to allow tests to be run without UI dependencies * Added feature found in subtype warning as a top-level problem in the meta-model * Added test suite and improved test cases * Added validator to check if the translation may provoke USE errors. * Added retyping for feature found in subtype within another problems' path

--- a/plugins/anatlyzer.atl.editor.quickfix/plugin.xml
+++ b/plugins/anatlyzer.atl.editor.quickfix/plugin.xml
@@ -60,7 +60,7 @@
    <extension
          point="anatlyzer.atl.editor.witnessfinder">
       <finder
-            finder="anatlyzer.atl.editor.witness.UseWitnessFinder">
+            finder="anatlyzer.atl.editor.witness.EclipseUseWitnessFinder">
       </finder>
    </extension>
    <extension
