* New heuristics in "No operation found in this module". * Updaded transml version (.jar file generated) * Adding error descriptions in the meta-model * Added tooltips capability to the analysis view

--- a/plugins/anatlyzer.atl.editor.quickfix/plugin.xml
+++ b/plugins/anatlyzer.atl.editor.quickfix/plugin.xml
@@ -81,4 +81,10 @@
             detector="anatlyzer.atl.editor.quickfix.kinds.OperationNotFoundInThisModuleQuickfixSet">
       </quickfixset>
    </extension>
+   <extension
+         point="anatlyzer.atl.editor.quickfix">
+      <quickfixset
+            detector="anatlyzer.atl.editor.quickfix.kinds.NoBindingForCompulsoryFeatureQuickfixSet">
+      </quickfixset>
+   </extension>
 </plugin>
