- ResolveTempWithoutRuleQuickFix_CreateRule - Made base class RuleGeneratingQuickFix for quickfixes creating new rules - Promoted a few methods to AbstractAtlQUickfix, but perhaps they should be moved to a library (ATLUtils?)

--- a/plugins/anatlyzer.atl.editor.quickfix/plugin.xml
+++ b/plugins/anatlyzer.atl.editor.quickfix/plugin.xml
@@ -95,4 +95,10 @@
             apply="anatlyzer.atl.editor.quickfix.errors.ResolveTempOutputPatternElementNotFound_QuickFix">
       </quickfix>
    </extension>
+   <extension
+         point="anatlyzer.atl.editor.quickfix">
+      <quickfix
+            apply="anatlyzer.atl.editor.quickfix.errors.ResolveTempWithoutRuleQuickFix_CreateRule">
+      </quickfix>
+   </extension>
 </plugin>
