- MM2MM1_5.atl -> should give an error, but it does not - Started NoModelFoundQuickfix_ChooseExistingOne

--- a/plugins/anatlyzer.atl.editor.quickfix/plugin.xml
+++ b/plugins/anatlyzer.atl.editor.quickfix/plugin.xml
@@ -107,4 +107,10 @@
             apply="anatlyzer.atl.editor.quickfix.errors.PrimitiveBindingInvalidAssignment_Quickfix">
       </quickfix>
    </extension>
+   <extension
+         point="anatlyzer.atl.editor.quickfix">
+      <quickfix
+            apply="anatlyzer.atl.editor.quickfix.errors.NoModelFoundQuickfix_ChooseExistingOne">
+      </quickfix>
+   </extension>
 </plugin>
