--- a/plugins/anatlyzer.atl.editor.quickfix/plugin.xml
+++ b/plugins/anatlyzer.atl.editor.quickfix/plugin.xml
@@ -113,4 +113,10 @@
             apply="anatlyzer.atl.editor.quickfix.errors.NoModelFoundQuickfix_ChooseExistingOne">
       </quickfix>
    </extension>
+   <extension
+         point="anatlyzer.atl.editor.quickfix">
+      <quickfix
+            apply="anatlyzer.atl.editor.quickfix.errors.ObjectBindingButPrimitiveAssignedQuickfix_changeBindingVariable">
+      </quickfix>
+   </extension>
 </plugin>
