--- a/plugins/anatlyzer.atl.editor.quickfix/plugin.xml
+++ b/plugins/anatlyzer.atl.editor.quickfix/plugin.xml
@@ -127,4 +127,10 @@
             detector="anatlyzer.atl.editor.quickfix.kinds.AccessToUndefinedValueQuickfixSet">
       </quickfixset>
    </extension>
+   <extension
+         point="anatlyzer.atl.editor.quickfix">
+      <quickfix
+            apply="anatlyzer.atl.editor.quickfix.errors.BindingExpectedOneAssignedMany_SelectFirst">
+      </quickfix>
+   </extension>
 </plugin>
