IncoherentHelperReturnTypeQuickfix_AssignInferredType.java

--- a/plugins/anatlyzer.atl.editor.quickfix/plugin.xml
+++ b/plugins/anatlyzer.atl.editor.quickfix/plugin.xml
@@ -133,4 +133,10 @@
             apply="anatlyzer.atl.editor.quickfix.errors.BindingExpectedOneAssignedMany_SelectFirst">
       </quickfix>
    </extension>
+   <extension
+         point="anatlyzer.atl.editor.quickfix">
+      <quickfix
+            apply="anatlyzer.atl.editor.quickfix.errors.IncoherentHelperReturnTypeQuickfix_AssignInferredType">
+      </quickfix>
+   </extension>
 </plugin>
