Fixed a bug that prevented implicit casting to be used in binding resolution analysis Initial code to run mutants

--- a/plugins/anatlyzer.experiments.typing/plugin.xml
+++ b/plugins/anatlyzer.experiments.typing/plugin.xml
@@ -33,5 +33,13 @@
             resourceType="file:atl">
       </experiment>
    </extension>
+   <extension
+         id="typing.experiment.quickfixEvaluationByMutation"
+         point="anatlyzer.experiments.newExperiment">
+      <experiment
+            delegate="anatlyzer.experiments.typing.QuickfixEvaluationByMutation"
+            resourceType="file:atl">
+      </experiment>
+   </extension>
 
 </plugin>
