--- a/plugins/anatlyzer.experiments.typing/build.properties
+++ b/plugins/anatlyzer.experiments.typing/build.properties
@@ -1,3 +1,6 @@
+source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               plugin.xml
+               plugin.xml,\
+               lib/,\
+               lib/commons-io-2.4.jar
