--- a/plugins/anatlyzer.experiments/build.properties
+++ b/plugins/anatlyzer.experiments/build.properties
@@ -11,4 +11,5 @@ bin.includes = plugin.xml,\
                lib/poi/ooxml-lib/xmlbeans-2.6.0.jar,\
                lib/poi/poi-3.11-20141221.jar,\
                lib/poi/poi-excelant-3.11-20141221.jar,\
-               lib/poi/poi-ooxml-3.11-20141221.jar
+               lib/poi/poi-ooxml-3.11-20141221.jar,\
+               icons/
