Working implementation of error tracking

--- a/plugins/anatlyzer.experiments.typing/plugin.xml
+++ b/plugins/anatlyzer.experiments.typing/plugin.xml
@@ -15,6 +15,10 @@
       <experiment
             delegate="anatlyzer.experiments.typing.CountTypeErrors"
             resourceType="file:atl">
+         <action
+               implementation="anatlyzer.experiments.typing.ExportDetailTypeErrors"
+               name="Export detail">
+         </action>
       </experiment>
    </extension>
    <extension
