* Added action to visualize path conditions with Graphviz (requires xdot) * Added check "oclIsUndefined" in the path condition of BindingPossiblyUnresolved when expression is mono-valued. * Missing test files

--- a/plugins/anatlyzer.experiments.typing/plugin.xml
+++ b/plugins/anatlyzer.experiments.typing/plugin.xml
@@ -19,6 +19,10 @@
                implementation="anatlyzer.experiments.typing.ExportDetailTypeErrors"
                name="Export detail">
          </actions>
+         <actions
+               implementation="anatlyzer.experiments.typing.ExportPotentialProblemsSummary"
+               name="Export potential problems summary">
+         </actions>
       </experiment>
    </extension>
    <extension
