* First running version of the "continuous analysis with the model finder", configurable via an ".atlc" file (continuous witness-finder) * LaTeX table of errors now generated in a pre-defined order * Some improvements in the Error meta-model * Small bug-fixes

--- a/doc/anatlyzer.doc.generator/tasks/build.xml
+++ b/doc/anatlyzer.doc.generator/tasks/build.xml
@@ -1,4 +1,4 @@
-<project name="gendoc" default="errors2table">
+<project name="gendoc" default="table2latex">
 	
 	<!-- ================================= 
           target: errors2table              
