* Added icons * Feature version 0.3.1

--- a/examples/anatlyzer.example.models2015/transformation/.gitignore
+++ b/examples/anatlyzer.example.models2015/transformation/.gitignore
@@ -9,3 +9,5 @@
 /PNML2PetriNet.noerrors.asm
 /Copy of PNML2PetriNet.asm
 /PNML2PetriNet_mod.asm
+/PNML2PetriNet_screenshot.asm
+/PNML2PetriNet.screenshot.asm
