* Fixed bug in resolvedTemp * Taking into account super-rules when dealing with rules without output pattern * Now "not oclIsKindOf" is analysed

--- a/plugins/anatlyzer.experiments.typing/plugin.xml
+++ b/plugins/anatlyzer.experiments.typing/plugin.xml
@@ -23,6 +23,12 @@
                implementation="anatlyzer.experiments.typing.ExportPotentialProblemsSummary"
                name="Export potential problems summary">
          </actions>
+
+         <actions
+               implementation="anatlyzer.experiments.typing.ExportTestFile"
+               name="Export test file">
+         </actions>
+         
       </experiment>
    </extension>
    <extension
