--- a/plugins/anatlyzer.use.witness/build.properties
+++ b/plugins/anatlyzer.use.witness/build.properties
@@ -8,4 +8,5 @@ bin.includes = META-INF/,\
                lib/use/combinatoricslib-0.2.jar,\
                lib/use/gsbase.jar,\
                lib/use/jruby-complete-1.4.0.jar,\
-               lib/use/ModelValidator_fat.jar
+               lib/use/ModelValidator_fat.jar,\
+               lib/transml.jar
