Correctly implemented the semantics of logical operators for number (integer and float)

--- a/tests/anatlyzer.atl.tests.unit/src/anatlyzer/atl/ruleconflicts/.gitignore
+++ b/tests/anatlyzer.atl.tests.unit/src/anatlyzer/atl/ruleconflicts/.gitignore
@@ -1,3 +1,4 @@
 /rule_conflicts_common_subtype.asm
 /rule_conflicts_inheritance.asm
 /bibtex2docbook_two_rules.asm
+/rule_conflicts_inheritance_multi_input.asm
