For feature/operation found in subtype now we check if the subclasses contains the feature/operation to avoid false positives.

--- a/tests/anatlyzer.atl.tests.unit/src/anatlyzer/atl/typing/.gitignore
+++ b/tests/anatlyzer.atl.tests.unit/src/anatlyzer/atl/typing/.gitignore
@@ -1,3 +1,7 @@
 /if_collection.asm
 /if_ptypes.asm
 /typing_ocl_any_declared.asm
+/typing_feature_found_in_all_subtypes.asm
+/typing_feature_found_in_all_subtypes_except_one.asm
+/typing_operation_found_in_all_subtypes.asm
+/typing_operation_found_in_all_subtypes_except_one.asm
