--- a/plugins/anatlyzer.atl.editor.quickfix/plugin.xml
+++ b/plugins/anatlyzer.atl.editor.quickfix/plugin.xml
@@ -23,6 +23,16 @@
             apply="anatlyzer.atl.editor.quickfix.warnings.CollectionOperationOverNoCollectionQuickfix">
       </quickfix>
    </extension>
+
+   <extension
+         id="anatlyzer.atl.editor.quickfix.warnings.SelectFirst_ChangeForAny"
+         name="Quickfix: Change select-first for any"
+         point="anatlyzer.atl.editor.quickfix">
+      <quickfix
+            apply="anatlyzer.atl.editor.quickfix.warnings.SelectFirst_ChangeForAnyQuickfix">
+      </quickfix>
+   </extension>
+   
       <extension
          id="anatlyzer.atl.editor.quickfix.warnings.CollectionOperationOverNoCollectionQuickfix"
          name="Quickfix: Change arrow for dot"
