--- a/tests/anatlyzer.atl.tests.unit/transml.properties
+++ b/tests/anatlyzer.atl.tests.unit/transml.properties
@@ -9,7 +9,7 @@
 #
 #
 #Wed Mar 25 10:59:53 CET 2015
-temp=./temp
+temp=/home/jesus/projects/anatlyzer/tests/anatlyzer.atl.tests.unit/temp
 solver.binaries=c\:/Program Files (x86)/Microsoft Research/Z3-4.0/bin/z3.exe
 solver.scope=3
 solver.timeout=600000
