--- a/plugins/anatlyzer.use.witness/.classpath
+++ b/plugins/anatlyzer.use.witness/.classpath
@@ -1,12 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="lib/transml.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/dist/transml_use_complete.jar" sourcepath="/transML"/>
 	<classpathentry exported="true" kind="lib" path="lib/plantuml.jar"/>
-	<classpathentry kind="lib" path="lib/use/antlr-3.4-complete.jar"/>
-	<classpathentry kind="lib" path="lib/use/combinatoricslib-0.2.jar"/>
-	<classpathentry kind="lib" path="lib/use/gsbase.jar"/>
-	<classpathentry kind="lib" path="lib/use/jruby-complete-1.4.0.jar"/>
-	<classpathentry kind="lib" path="lib/use/ModelValidator_fat.jar" sourcepath="/transML/"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
