--- a/plugins/anatlyzer.use.witness/build.properties
+++ b/plugins/anatlyzer.use.witness/build.properties
@@ -4,9 +4,4 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                lib/plantuml.jar,\
-               lib/use/antlr-3.4-complete.jar,\
-               lib/use/combinatoricslib-0.2.jar,\
-               lib/use/gsbase.jar,\
-               lib/use/jruby-complete-1.4.0.jar,\
-               lib/use/ModelValidator_fat.jar,\
-               lib/transml.jar
+               lib/dist/transml_use_complete.jar
